@@ -7,6 +7,11 @@
 	* acspecific.m4 (AC_CHECK_HEADER_DIRENT): Reintroduce its
 	AC_DEFUN.
 
+1999-10-06  Akim Demaille  <akim@epita.fr>
+
+	* acspecific.m4: Various formatting changes.
+	* acspecific.m4 (AC_PROG_CC_WORKS): Declare main returns an int.
+
 1999-10-05  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
 
 	Shell meta characters in an argument causes the configure script
